# wagi

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md
.github/workflows/: release.yaml  rust.yml
docs/: README.md  architecture.md  configuring_and_running.md  environment_variables.md  installation.md  release-process.md  writing_modules.md
examples/: README.md  cache.toml  error.wat  hello.wasm  hello.wat  http-example.wasm  invoice.toml  log.wasm  mkbindle.rs  modules.toml
examples/sources/http-example/: Cargo.toml
examples/sources/http-example/.cargo/: config.toml
examples/sources/http-example/src/: main.rs
src/: asset_cache.rs  bindle_util.rs  caching_bindle_client.rs  dispatcher.rs  dynamic_route.rs  emplacer.rs  handler_compiler.rs  handler_config.rs  handlers.rs  http_util.rs  httputil.rs  lib.rs  loader.rs  main.rs  module_loader.rs  request.rs  stream_writer.rs  tls.rs  version.rs  wagi_app.rs  wagi_config.rs  wagi_server.rs  wasm_module.rs  wasm_runner.rs
src/handler_loader/: compiler.rs  emplacer.rs  loader.rs  mod.rs  module_loader.rs
src/runtime/: bindle.rs  mod.rs
src/upstream/: mod.rs
testdata/: README.md
testdata/module-maps/: crlf.wat  dynamic-routes.wasm  multiple-entrypoints.wasm  test1.toml  test2.toml  test3.toml  test_dynamic_routes.toml  test_healthz_override.toml  toast-on-demand.wasm  wat.toml
testdata/sources/dynamic-routes/: .gitignore  Cargo.toml  HIPPOFACTS
testdata/sources/dynamic-routes/src/: main.rs
testdata/sources/http-test/: Cargo.toml  HIPPOFACTS  modules.toml
testdata/sources/http-test/src/: main.rs
testdata/sources/multiple-entrypoints/: Cargo.toml
testdata/sources/multiple-entrypoints/src/: main.rs
testdata/sources/print-env/: Cargo.toml  HIPPOFACTS
testdata/sources/print-env/src/: main.rs
testdata/standalone-bindles/28e62d239a12d50b11db734eb4a37bf9e746fd487f2a375d17db3a82d6869d54/: invoice.toml
testdata/standalone-bindles/3291b1beb4e6d0a0bee76b7c93b553bbf9649faec610029e87e125c3b68600f0/: invoice.toml
testdata/standalone-bindles/3cb6fb9875a528c0b030b6366a76991250a8571ab7beffe5b9f37b342aea372e/: invoice.toml
testdata/standalone-bindles/50920c514f5fa8233f57af27c17cef08f01b78500adff252c75df51c5cd9a708/: invoice.toml
testdata/standalone-bindles/5c168e0e969ec344be4044dccd4f68e26f20976a5edac0d49e0c28c57ba465b5/: invoice.toml
testdata/standalone-bindles/8b90d4296616f9f12690d70b0b90041947fac2b7a1dd6324232f8b7b0c5d5395/: invoice.toml
