[package]
    name    = "wagi"
    version = "0.6.1"
    authors = ["Matt Butcher <matt.butcher@microsoft.com>"]
    edition = "2021"

[dependencies]
    anyhow                          = "1.0"
    async-stream                    = "0.3"
    async-trait                     = "0.1"
    bindle                          = { version = "0.8.0", default-features = false, features = ["client", "server", "caching"] }
    cap-std                         = "^0.22"
    clap                            = "2.33.3"
    docker_credential               = "1.0.1"
    env-file-reader                 = "0.2"
    futures                         = "0.3"
    hyper                           = { version = "0.14", features = ["full"] }
    indexmap                        = { version = "^1.6.2", features = ["serde"] }
    oci-distribution                = "0.6"
    serde                           = { version = "1.0", features = ["derive"] }
    sha2                            = "0.9"
    tokio                           = { version = "1.1", features = ["full"] }
    toml                            = "0.5"
    url                             = "2.2"
    tokio-rustls                    = "0.22"
    tempfile                        = "3.2"
    tracing-subscriber              = "0.2"
    tracing                         = { version = "0.1", features = ["log"] }
    tracing-futures                 = "0.2"
    url-escape                      = "0.1"
    wasi-common                     = "0.33"
    wasi-cap-std-sync               = "0.33"
    wasi-experimental-http-wasmtime = "0.8.0"
    wasmtime                        = "0.33"
    wasmtime-wasi                   = "0.33"
    wasmtime-cache                  = "0.33"
    wat                             = "1.0.37"
    chrono                          = "0.4.19"
